Various stylesheet fixes (#3869 #3881) (#3888)
* Remove extra space for group collapsed members counters in inversed
layout #3869

* Fix highlighter position of Photon theme in inverse layout

* Fix tab group label styles for classic sidebar theme #3881

* Fix tab label vertical alignment #3881

The 0.25em padding-bottom is not necessary. Ideally, we want to set
the padding to zero. But here, we run into the notorious issue that
overflow-x:hidden and overflow-y:visible cannot coexist. The overflow-y
automatically becomes auto. So we set the padding to be 0.35em on both
side, effectively making the line-height 1.7. For reference, this is
also the line-height of native tab bar.

* Fix vertical alignment of the expand/collapse icon

It seems that the height of <tab-twisty> is not 16px, but a value
dependent on the primary matched font. This value is larger than 16px,
and the icon is placed at the top of the box, leaving a space around 2px
at the bottom. This makes the icon visually too high. By changing the
box model to flex, it no longer takes text flow into consideration, and
its height will always be exactly 16px.

* Fix font weight of tab group label

Firefox native tab bar uses a font weight of 600. We should follow it.

* Photon theme: Add left border for root tabs under a tab group

* High Contrast theme: Add background and border for tab group labels

* Photon theme: Give tab group labels higher z-index

* Sidebar theme: do not remove the padding around tab group labels

--- a/webextensions/sidebar/styles/base.css
+++ b/webextensions/sidebar/styles/base.css
@@ -1048,10 +1048,11 @@ tab-item tab-label {
   }
 }
 
-
-/* This is for backward compatibility about custom user style rules like https://github.com/piroor/treestyletab/issues/1363 */
 tab-item .label-content {
+  /* This is for backward compatibility about custom user style rules like https://github.com/piroor/treestyletab/issues/1363 */
   color: inherit;
+
+  vertical-align: unset;
 }
 
 .counter {
@@ -1204,7 +1205,7 @@ tab-item[type="group"] {
   }
 
   tab-label {
-    font-weight: bold;
+    font-weight: 600;
   }
 
   .caption,
@@ -1276,7 +1277,12 @@ tab-item[type="group-collapsed-members-counter"] {
     --tab-text: light-dark(var(--tab-group-color), var(--tab-group-color-pale)) !important;
   }
 
+  :root.inverted & tab-item-substance {
+    flex-direction: row-reverse;
+  }
+
   :root.inverted & tab-label {
+    margin-inline: 0 0.25em;
     text-align: end;
   }
 }
